force-app/main/default/objects/Eval_Activity_Report__c/Eval_Activity_Report__c.object-meta.xml
<CustomObject>
    <label>Eval Activity Report</label>
    <nameField>
        <label>Eval Activity Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eval Activity Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>