force-app/main/default/objects/Eval_Activity_Report__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>Business</label>
    <length>200</length>
    <type>Text</type>
</CustomField>