force-app/main/default/objects/Eval_Activity_Report__c/fields/Evaluation_Owner__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluation Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eval_Activity_Report</relationshipName>
    <type>Lookup</type>
</CustomField>