force-app/main/default/objects/Eval_Activity_Report__c/fields/Extensions__c.field-meta.xml
<CustomField>
    <fullName>Extensions__c</fullName>
    <label>Extensions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>