force-app/main/default/objects/Eval_Activity_Report__c/fields/Past_Due__c.field-meta.xml
<CustomField>
    <fullName>Past_Due__c</fullName>
    <label>Past Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>