force-app/main/default/objects/Eval_Activity_Report__c/fields/Returned__c.field-meta.xml
<CustomField>
    <fullName>Returned__c</fullName>
    <label>Returned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>