force-app/main/default/objects/Eval_Activity_Report__c/fields/Shipments__c.field-meta.xml
<CustomField>
    <fullName>Shipments__c</fullName>
    <label>Shipments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>